--- a/Recreating_BL_Lacertae_2016_gamma_flare_plots.ipynb
+++ b/Recreating_BL_Lacertae_2016_gamma_flare_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "5117e000",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "3af29c2e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "b6378314",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "9a33ce5e",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "ed402550",
    "metadata": {},
    "outputs": [],
@@ -91,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "29e04c44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/Leo/Documents/McGill/Summer Intro to VERITAS/BL Lacertae/data/'"
+    "path = 'BL_Lacertae/data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "60ecbb7e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e9ad1743",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "text": [
       "Data store:\n",
       "HDU index table:\n",
-      "BASE_DIR: /Users/Leo/Documents/McGill/Summer Intro to VERITAS/BL Lacertae/data\n",
+      "BASE_DIR: BL_Lacertae/data\n",
       "Rows: 65\n",
       "OBS_ID: 83016 -- 83768\n",
       "HDU_TYPE: ['aeff', 'edisp', 'events', 'gti', 'psf']\n",
@@ -1141,8 +1141,7 @@
     }
    ],
    "source": [
-    "paper = Table.read('/Users/Leo/Documents/McGill/Summer Intro to VERITAS/BL Lacertae/bl_combine.fits', \n",
-    "                   format='fits')\n",
+    "paper = Table.read('BL_Lacertae/bl_combine.fits', format='fits')\n",
     "paper"
    ]
   },
@@ -1448,7 +1447,7 @@
     "with open(\"temptest.ecsv\", \"w\") as myfile:\n",
     "    myfile.write(header)\n",
     "\n",
-    "filename = '/Users/Leo/Documents/McGill/Summer Intro to VERITAS/BL Lacertae/bl_combine.fits'\n",
+    "filename = 'BL_Lacertae/bl_combine.fits'\n",
     "\n",
     "imp_tab = Table.read(filename)\n",
     "\n",
